2010-05-21  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlParser.c:
	[ 3005424 ] Memory leak on error responses

2010-05-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/TestProviders/tests/IndRetryTest.sh:
	[ 2964568 ] Indication stress test

2010-05-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 3004992 ] Sporadic deadlock on multiple failing indications

2010-05-20  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* instance.c:
	[ 3004996 ] Typo in instance.c

2010-05-19  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 3004358 ] indCIMXMLHanlder ci can leak on error condition

2010-05-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* profileProvider.c, providerMgr.c, default.reg.in:
	[ 3002851 ] SLP needs to register at startup

2010-05-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* internalProvider.c:
	[ 3001879 ] Remove SLP sections from internalProvider

	* httpAdapter.c:
	[ 3001896 ] httpAdapter can crash on bad content length

	[ 3001915 ] Possible heap corruption in httpAdapter
	
2010-05-14 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* 10_interop.mof, default.reg.in, indCIMXMLHandler.c, 
		interopServerProvider.c, test/TestProviders/tests/IndRetryTest.sh:
	[ 2994969 ] Persist failing indications

2010-05-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/TestProviders/tests/IndRetryTest.sh:
	[ 2997961 ] IndRetryTest.sh leaves IndicationSubscription modded

2010-05-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/TestProviders/cmpiTestIndicationProvider.c:
	[ 2997928 ] Namespace incorrect in test_providers

2010-04-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.c:
	[ 2980524 ] providerRegister should collate namespaces
	(patch by Klaus Kaempf)

2010-04-27  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* constClass.c, instance.c:
	[ 2993137 ] CMSetProperty fails for CMPIInstance for EmbeddedObject
