@@ -521,6 +521,7 @@ void * retryExport (void * lctx)
     CMPIArgs * in;
     CMPIInstance *sub;
     CMPIContext *ctx=(CMPIContext *)lctx;
+    CMPIContext *ctxLocal;
     RTElement *cur,*purge;
     struct timeval tv;
     struct timezone tz;
@@ -530,6 +531,7 @@ void * retryExport (void * lctx)
     CMPIEnumeration *isenm = NULL;
 
     CMPIStatus st = { CMPI_RC_OK, NULL };
+    ctxLocal = prepareUpcall(ctx);
 
     // Get the retry params from IndService
     op=CMNewObjectPath(_broker,"root/interop","CIM_IndicationService",NULL);
@@ -587,7 +589,7 @@ void * retryExport (void * lctx)
                     _SFCB_TRACE(1,("--- Indication succeeded."));
                     sfc=0;
                     CMSetProperty(sub,"DeliveryFailureTime",&sfc,CMPI_uint64);
-                    InternalProviderModifyInstance(_broker, ctx, NULL, cur->sub, sub, NULL);
+                    CBModifyInstance(_broker, ctxLocal, cur->sub, sub, NULL);
                 }
                 // remove from queue in either case
                 _SFCB_TRACE(1,("--- Indication removed."));
@@ -604,7 +606,7 @@ void * retryExport (void * lctx)
                 CMPIInstance * indele=internalProviderGetInstance(cur->SFCBIndEle,&st);
                 CMSetProperty(indele,"LastDelivery",&cur->lasttry,CMPI_sint32);
                 CMSetProperty(indele,"RetryCount",&cur->count,CMPI_uint32);
-                InternalProviderModifyInstance(_broker, ctx, NULL, cur->SFCBIndEle, indele, NULL);
+                CBModifyInstance(_broker, ctxLocal, cur->SFCBIndEle, indele, NULL);
 
                 CMPIData sfcp=CMGetProperty(sub,"DeliveryFailureTime",NULL);
                 sfc=sfcp.value.uint64;
@@ -613,7 +615,7 @@ void * retryExport (void * lctx)
                     sfc=tv.tv_sec;
                     cur=cur->next;
                     CMSetProperty(sub,"DeliveryFailureTime",&sfc,CMPI_uint64);
-                    InternalProviderModifyInstance(_broker, ctx, NULL, cur->sub, sub, NULL);
+                    CBModifyInstance(_broker, ctxLocal, cur->sub, sub, NULL);
                 } else if (sfc+rtint < tv.tv_sec) {
                     // Exceeded subscription removal threshold, if action is:
                     // 2, delete the sub; 3, disable the sub; otherwise, nothing
@@ -643,7 +645,8 @@ void * retryExport (void * lctx)
     _SFCB_TRACE(1,("--- Indication retry queue empty, thread exitting."));
     pthread_mutex_unlock(&RQlock);
     retryRunning=0;
-    ctx->ft->release(ctx);
+    CMRelease(ctxLocal);
+    CMRelease(ctx);
     _SFCB_RETURN(NULL); 
 }
 
