@@ -44,6 +44,7 @@ Bugs fixed:
 - 3004996 Typo in instance.c
 - 3004992 Sporadic deadlock on multiple failing indications
 - 3005424 Memory leak on error responses
+- 3005508 Warning in indCIMXMLHandler.c 
 
 Changes in 1.3.7
 ================
